2023-07-08T01:44:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5492004228 # 969
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
* notice: last 14d: unq all: 16 51
* notice: prev accum: outdated-unq outdated-all / unq all: 507 811 / 540 866
* notice: next accum: outdated-unq outdated-all / unq all: 509 814 / 540 866
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2023-06-23] / [2023-06-24]

2023-07-07T08:21:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5484334732 # 967
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-07
* notice: last 14d: unq all: 16 53
* notice: prev accum: outdated-unq outdated-all / unq all: 507 811 / 539 865
* notice: next accum: outdated-unq outdated-all / unq all: 507 811 / 540 866
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-06-23 2023-07-07]

2023-07-06T16:24:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5477834605 # 965
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 16 54
* notice: prev accum: outdated-unq outdated-all / unq all: 505 808 / 538 863
* notice: next accum: outdated-unq outdated-all / unq all: 507 811 / 539 865
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [2023-06-22] / [2023-07-06]

2023-07-06T08:23:04Z: