@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-08T01:44:14Z",
+  "timestamp" : "2023-07-08T08:19:54Z",
   "count_outdated" : 814,
   "uniques_outdated" : 509,
-  "count" : 866,
-  "uniques" : 540,
+  "count" : 868,
+  "uniques" : 542,
   "clones" : [
     {
       "timestamp": "2023-06-24T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
