@@ -1,6 +1,6 @@
 {
-  "count": 51,
-  "uniques": 16,
+  "count": 53,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2023-06-24T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-07-07T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
