@@ -1,3 +1,12 @@
+2023-07-08T08:19:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5493502116 # 970
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
+* notice: last 14d: unq all: 17 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 509 814 / 540 866
+* notice: next accum: outdated-unq outdated-all / unq all: 509 814 / 542 868
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-07-08]
+
 2023-07-08T01:44:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5492004228 # 969
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
